[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://spritesheets/stick-man-blank/__stick-man_blank_idle_732px_by_733px-per-frame.png" type="Texture" id=2]
[ext_resource path="res://spritesheets/stick-man-blank/__stick-man_blank_shotgun_732px_by_733px-per-frame.png" type="Texture" id=3]
[ext_resource path="res://spritesheets/stick-man-blank/__stick-man_blank_jump_732px_by_733px-per-frame.png" type="Texture" id=4]
[ext_resource path="res://spritesheets/stick-man-blank/__stick-man_blank_run_732px_by_733px-per-frame.png" type="Texture" id=5]
[ext_resource path="res://spritesheets/stick-man-blank/__stick-man_blank_die_732px_by_733px-per-frame.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.0
height = 48.0

[sub_resource type="Animation" id=7]
resource_name = "damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("damage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("die:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("jump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 14, 15 ]
}

[sub_resource type="Animation" id=5]
resource_name = "shoot"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("gun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 5, 7, 9 ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 150, 250 )
script = ExtResource( 1 )

[node name="idle" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 1

[node name="run" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
vframes = 4
hframes = 4
frame = 1

[node name="gun" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 14 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
vframes = 3
hframes = 4
frame = 9

[node name="jump" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
vframes = 4
hframes = 4
frame = 14

[node name="die" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
vframes = 3
hframes = 4
frame = 1

[node name="damage" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 13

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 24, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 7 )
anims/die = SubResource( 6 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/run = SubResource( 4 )
anims/shoot = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Invulnerability Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Bullet_timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 24, 0 )
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Invulnerability Timer" to="." method="_on_Invulnerability_Timer_timeout"]
[connection signal="timeout" from="Bullet_timer" to="." method="_on_Bullet_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
